--- a/service-registry/src/main/resources/application.yml
+++ b/service-registry/src/main/resources/application.yml
@@ -1,6 +1,5 @@
-server:
-  port: 8761
- 
 eureka:
   client:
-    register-with-eureka: false 
+    register-with-eureka: false
+    fetch-registry: false
+    enabled: true
